--- a/series.conf
+++ b/series.conf
@@ -4399,6 +4399,7 @@
 	#ugly stuff
 	patches.fixes/avoid_ehci_xhci_switch_for_BT_PB430.patch
 	patches.fixes/0001-Do-not-switch-webcams-in-some-HP-ProBooks-to-XHCI.patch
+	patches.suse/0001-USB-check-usb_get_extra_descriptor-for-proper-size-F.patch
 
 	#wdm patches
 	patches.drivers/0002-USB-cdc-wdm-sanitize-error-returns.patch
