--- a/series.conf
+++ b/series.conf
@@ -6677,6 +6677,7 @@
 	patches.drivers/0001-cdc-acm-added-sanity-checking-for-probe.patch
 	patches.drivers/0001-PCI-Fix-BUG-on-device-attach-failure.patch
 	patches.drivers/0001-USB-core-fix-device-node-leak.patch
+	patches.suse/0001-USB-check-usb_get_extra_descriptor-for-proper-size-F.patch
 
 	# serial
 	patches.drivers/0001-USB-serial-fix-compare_const_fl.cocci-warnings.patch
