--- a/series.conf
+++ b/series.conf
@@ -23526,6 +23526,7 @@
 	patches.drivers/0001-ipmi-ssif-Add-support-for-multi-part-transmit-messag.patch
 	patches.fixes/x86-kexec-correct-kexec_backup_src_end-off-by-one-error.patch
 	patches.fixes/resource-include-resource-end-in-walk_-interfaces.patch
+	patches.fixes/ip-fail-fast-on-IP-defrag-errors.patch
 	patches.drivers/net-ibm-fix-return-type-of-ndo_start_xmit-function.patch
 	patches.drivers/net-ena-minor-performance-improvement.patch
 	patches.drivers/net-ena-complete-host-info-to-match-latest-ENA-spec.patch
