ipv6: discard IP frag queue on more errors (CVE-2018-5391 bsc#1103097).

--- a/series.conf
+++ b/series.conf
@@ -23528,6 +23528,7 @@
 	patches.fixes/resource-include-resource-end-in-walk_-interfaces.patch
 	patches.fixes/ip-fail-fast-on-IP-defrag-errors.patch
 	patches.drivers/net-ibm-fix-return-type-of-ndo_start_xmit-function.patch
+	patches.fixes/ipv6-discard-IP-frag-queue-on-more-errors.patch
 	patches.drivers/net-ena-minor-performance-improvement.patch
 	patches.drivers/net-ena-complete-host-info-to-match-latest-ENA-spec.patch
 	patches.drivers/net-ena-introduce-Low-Latency-Queues-data-structures.patch
