--- a/series.conf
+++ b/series.conf
@@ -2435,6 +2435,7 @@
 	patches.fixes/0002-NFS-Optimize-fallocate-by-refreshing-mapping-when-ne.patch
 	patches.fixes/0001-NFS-flush-data-when-locking-a-file-to-ensure-cache-c.patch
 	patches.fixes/sunrpc-use-SVC_NET-in-svcauth_gss_-functions.patch
+	patches.fixes/sunrpc-use-after-free-in-svc_process_common.patch
 
 	########################################################
 	# cifs patches
