ipsec: Fix aborted xfrm policy dump crash (CVE-2017-16939 bsc#1069702 bsc#1120260).

--- a/series.conf
+++ b/series.conf
@@ -2366,6 +2366,7 @@
 	patches.fixes/Cipso-cipso_v4_optptr-enter-infinite-loop.patch
 	patches.fixes/irda-Fix-memory-leak-caused-by-repeated-binds-of-ird.patch
 	patches.fixes/irda-Only-insert-new-objects-into-the-global-databas.patch
+	patches.fixes/ipsec-Fix-aborted-xfrm-policy-dump-crash.patch
 
 	########################################################
 	# Netfilter
